# learning

./: .gitmodules
algo1/quick_sort/: quick_sort.h
algo1/w1/: count_inv.cc  m.cc  merge_sort.h
algo1/w2/: quick_sort.cc
algo1/w3/: TASK  q1_karger_min_cut.cc
algo1/w4/: TASK  scc.cc
algo1/w6/: TASK
algo1_Wayne_Sedgewick/w1/: Percolation.java  PercolationStats.java  unions.cc
algo1_Wayne_Sedgewick/w2/: Deque.java  RandomizedQueue.java  Subset.java  deque_simple.h  deque_simple_test.cc  partial_ins.cc
algo1_Wayne_Sedgewick/w3/: quiz_selection_sort.cc
algo2/w1/: TASK  q1q2-job_schedule.cc  q1q2-job_schedule.rs  q3-prim_mst.cc  q3-prim_mst_boost.cc
algo2/w2/: TASK  clustering.cc  q1-clustering.cc  q2-clustering.cc  sets_test.cc
algo2/w3/: TASK  q1-knapsack.cc  q2-knapsack_big.cc  quiz5_opt_subtree.cc
algo2/w4/: TASK  q1-all_pairs_shortest_path.cc
algo2/w5/: TASK  q1-tsp.cc  tsp3.txt
algo2/w6/: TASK  q1.cc  q1.rs
algo2/w6/q1_rs/: Cargo.toml
algo2/w6/q1_rs/src/: main.rs
embedded/cmake/: arm-none-eabi.cmake  freertos.cmake
embedded/fpga_test/: CMakeLists.txt  nextpnr_pre_pack.py
embedded/fpga_test/src/: ice40hx8k-evb.pcf  main.sv  main.v  my_lib.sv  my_lib.v  my_lib_tb.v  pwm.v  sram_test.sv  sram_test.v
embedded/fpga_tools/: prog.py
embedded/fpga_tools/fw/: CMakeLists.txt  main.cc
embedded/ld/: nrf52dk.ld  nrf5340dk.ld  stm32f103.ld  stm32g031.ld  stm32h745_cm4.ld  stm32h745_cm7.ld  stm32h7_cm7.ld  stm32l072.ld  stm32wb55.ld  stm32wl55_cpu1.ld  stm32wl55_cpu2.ld
embedded/lora_pair/: CMakeLists.txt
embedded/lora_pair/endnode/: CMakeLists.txt  FreeRTOSConfig.h  lora.cc  lora.h  main.cc  startup.c
embedded/lora_pair/gateway/: CMakeLists.txt
embedded/lora_pair/gateway/cm0/: CMakeLists.txt  FreeRTOSConfig.h  main.cc  startup.c
embedded/lora_pair/gateway/cm4/: CMakeLists.txt  FreeRTOSConfig.h  cmsis_device.h  main.cc  startup.c
embedded/lora_pair/gateway/common/: utils.cc  utils.h
embedded/lora_zephyr/: build.sh
embedded/nrf52_lora/: CMakeLists.txt
embedded/nrf52_lora/src/: FreeRTOSConfig.h  cmsis_device.h  logger_fwd.h  lora.cc  lora.h  main.cc  startup.c
embedded/nrf52_test/: CMakeLists.txt
embedded/nrf52_test/src/: FreeRTOSConfig.h  main.cc  startup.c
embedded/nrf52_zephyr_test/: CMakeLists.txt  app.overlay  build.sh  prj.conf
embedded/nrf52_zephyr_test/src/: main.c
embedded/nrf5340_test/: CMakeLists.txt
embedded/nrf5340_test/src/: FreeRTOSConfig.h  cmsis_device.h  main.cc  startup.c
embedded/rp2040_test/: CMakeLists.txt  rp2040.ld
embedded/rp2040_test/src/: startup.c  startup.cc
embedded/stm32_bare/: CMakeLists.txt
embedded/stm32_bare/src/: FreeRTOSConfig.h  cmsis_device.h  main.cc  startup.c
embedded/stm32_lib/: bsp.cc  bsp.h  freertos_utils.cc  freertos_utils.h  lcd.h  lib_nrf5.h  lib_rp2040.h  lib_stm32.h  logging.cc  logging.h  my_stdlib.c  nrf24.h  startup.c  sx1276.h
embedded/stm32_lib/freertos/: FreeRTOSConfig-default.h
embedded/stm32_lora/: CMakeLists.txt
embedded/stm32_lora/src/: FreeRTOSConfig.h  lora.cc  lora.h  main.cc  startup.c  sx1276.cc  sx1276.h
embedded/stm32_lowpower/: CMakeLists.txt
embedded/stm32_lowpower/src/: cmsis_device.h  main.cc  startup.c
embedded/stm32_midiplayer/: CMakeLists.txt  TODO  lookup_gen.py
embedded/stm32_midiplayer/ld/: stm32l432.ld
embedded/stm32_midiplayer/src/: FreeRTOSConfig.h  cmsis_device.h  logger_fwd.h  lookup_tables.cc.inc  main.cc  music.h  player.cc  player.h  startup.c
embedded/stm32_motor/: CMakeLists.txt
embedded/stm32_motor/src/: FreeRTOSConfig.h  cmsis_device.h  main.cc  startup.c
embedded/stm32_mp/: CMakeLists.txt
embedded/stm32_mp/cm4/: CMakeLists.txt  FreeRTOSConfig.h  cmsis_device.h  main.cc  startup.c
embedded/stm32_mp/cm7/: CMakeLists.txt  FreeRTOSConfig.h  cmsis_device.h  fb1.cc  main.cc  startup.c
embedded/stm32_mp/ld/: stm32h745_cm7.ld
embedded/stm32_mp/src/: FreeRTOSConfig.h  main.cc  startup.c
embedded/stm32_nrf/: CMakeLists.txt
embedded/stm32_nrf/ld/: stm32l072.ld
embedded/stm32_nrf/src/: main.cc  startup.c
embedded/stm32_nrf24/: CMakeLists.txt
embedded/stm32_nrf24/cmake/: arm-none-eabi.cmake
embedded/stm32_nrf24/src/: FreeRTOSConfig.h  cmsis_device.h  main.cc  startup.c
embedded/stm32_test/: CMakeLists.txt
embedded/stm32_test/cmake/: arm-none-eabi.cmake
embedded/stm32_test/freertos/: FreeRTOSConfig.h
embedded/stm32_test/ld/: stm32f103.ld  stm32h745_cm4.ld  stm32h745_cm7.ld  stm32h7a3.ld  stm32l072.ld
embedded/stm32_test/src/: FreeRTOSConfig.h  ad5932.cc  ad5932.h  ad5932_defs.h  cmsis_device.h  lib_stm32.h  logging.cc  logging.h  main.cc  startup.c
embedded/stm32_traffic_lights/: CMakeLists.txt
embedded/stm32_traffic_lights/src/: FreeRTOSConfig.h  main.cc  startup.c
embedded/stm32_usb/: CMakeLists.txt
embedded/stm32_usb/src/: FreeRTOSConfig.h  cmsis_device.h  logger_fwd.h  main.cc  startup.c
embedded/stm32f103_led_blink/: CMakeLists.txt  Makefile  linker.ld  main.c
embedded/stm32f103_led_blink/ld/: stm32f103.ld  stm32l152.ld
embedded/stm32f103_led_blink/src/: main.cc  startup.c
embedded/stm32wl55_bare/: CMakeLists.txt
embedded/stm32wl55_bare/cm0/: main.cc
embedded/stm32wl55_bare/cm4/: CMakeLists.txt  FreeRTOSConfig.h  main.cc
embedded/stm32wl55_bare/src/: FreeRTOSConfig.h  main.cc  startup.c
lib/sets/: sets.h  sets_test.cc
machine-learning/202410_hackaton/: gd.py  nx.exs  p.py  sklearn_gd.py
machine-learning/coursera_machine_learning/: data.py  gd.py  sklearn_gd.py
machine-learning/machine-learning-ex1/ex1/: computeCost.m  gradientDescent.m  plotData.m
my/: heap.cc  radix_sort.cc
my/elixir_chunk/: mix.exs
my/elixir_chunk/lib/: elixir_chunk.ex
my/elixir_chunk/test/: elixir_chunk_test.exs
sudoku/: Makefile  main.cc  solver.cc  solver.h  solver_tests.cc
sudoku-rs/: Cargo.toml
sudoku-rs/src/: bitset.rs  consts.rs  main.rs  sudoku.rs  types.rs
